<resources>
    <string name="app_name">EUDI DOME Wallet</string>
    <string name="generic_error">An unexpected error occurred</string>
    <string name="generic_accept_button">Accept</string>
    <string name="generic_cancel_button">Cancel</string>
    <string name="generic_enter_button">Log in</string>
    <string name="generic_goback">Back</string>
    <string name="generic_exit_button">Log out</string>
    <string name="generic_close_button">Close</string>
    <string name="generic_quit_action_title">Do you want to log out?</string>
    <string name="generic_error_popup_title">Oops!</string>
    <string name="generic_success_title">Success!</string>
    <string name="generic_dummy_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="generic_no_date">Date not available</string>
    <string name="generic_time_expired">The session has expired</string>
    <string name="generic_select_all">Select your credentials</string>
    <string name="generic_register_evidence">Register evidence</string>
    <string name="short_wait_title">One moment,\nplease...</string>
    <string name="splash_powered_1">Powered by </string>
    <string name="splash_powered_2">INETUM</string>
    <string name="splash_root_error_title">DEVICE ERROR</string>
    <string name="splash_root_error_content">This device has been tampered with and cannot use the app</string>
    <string name="menu_button_home">Home</string>
    <string name="menu_button_credentials">Credentials</string>
    <string name="menu_button_logs">Activity</string>
    <string name="menu_button_more">More</string>
    <string name="prereg_title">What is your case?</string>
    <string name="prereg_case_registration_title">A. I need to create my identity</string>
    <string name="prereg_case_registration_sub">Is this your first time accessing the Wallet? Haven\’t created your identity yet?</string>
    <string name="prereg_case_registration_button">CREATE MY IDENTITY</string>
    <string name="prereg_case_recovery_title">B. I have an identity, I want to recover it</string>
    <string name="prereg_case_recovery_sub">Do you have your identity and backup saved? You can recover your identity by restoring your data </string>
    <string name="register_step1_title">STEP 1. Create your wallet\'s password *</string>
    <string name="register_step1_continue_button">NEXT</string>
    <string name="register_form_pwd_hint">Password *</string>
    <string name="register_form_pwd_hint2">Confirm password *</string>
    <string name="register_form_nick_hint">Name or nickname *</string>
    <string name="register_opt_fingerprint">I want to use biometrics</string>
    <string name="register_opt_legalterms1">I have read and accept the</string>
    <string name="register_opt_legalterms2"><u>legal terms</u></string>
    <string name="register_error_form">Check the fields</string>
    <string name="register_error_terms">Please accept the Legal Terms to continue</string>
    <string name="register_error_empty_field">Fill in both fields</string>
    <string name="register_error_empty_name_field">Enter your name or nickname</string>
    <string name="register_error_validation">The password does not meet the minimum requirements</string>
    <string name="register_pwd_composition">Minimum 8 characters, 1 lowercase, 1 uppercase, and 1 number</string>
    <string name="register_pwd_notconfirmed">Passwords do not match</string>
    <string name="register_step2_title">STEP 2. Create your profile name</string>
    <string name="register_step2_finalize_button">Finish</string>
    <string name="register_form_nick_maxlength">Maximum 15 characters</string>
    <string name="register_warning_password">IMPORTANT: This password is unique and unrecoverable. Save it in a secure place or you won’t be able to access your data without it.</string>
    <string name="qr_cancelled">QR scan was cancelled</string>
    <string name="pre_authorized_title">To ensure the security of your data</string>
    <string name="pre_authorized_description">Enter the code sent by SMS</string>
    <string name="pre_authorized_form_hint">Enter the code</string>
    <string name="login_welcome_title">Hello %1$s!</string>
    <string name="login_welcome_sub">For security reasons, enter your password for verification.</string>
    <string name="login_pwd_form_hint">Password</string>
    <string name="login_biometric_error">An error occurred, please try again or log in with your password</string>
    <string name="login_biometric_failed">Biometric access failed, please try again or log in with your password</string>
    <string name="login_biometric_title">Biometric login</string>
    <string name="login_biometric_subtitle">Use biometrics to unlock your wallet</string>
    <string name="login_biometric_negative_button">Use password</string>
    <string name="login_toast_wrong_password">Incorrect password</string>
    <string name="login_form_wrong_password">Check your password</string>
    <string name="login_biometric_text">ACCESS WITH FINGERPRINT</string>
    <string name="profile_header">Your credentials at your disposal</string>
    <string name="profile_sub_header">Manage your credentials</string>
    <string name="profile_query_hint">Search your data: \"Lear\", \"Name\", \"Date\"</string>
    <string name="profile_filters_title">Filters</string>
    <string name="profile_filters_ordery_by">Filter by</string>
    <string name="profile_filters_ordery_by_entity">Entity</string>
    <string name="profile_filters_ordery_by_type">Data type</string>
    <string name="profile_filters_ordery_by_status">Status</string>
    <string name="profile_filters_ordery_by_date">Date</string>
    <string name="profile_filters_filter_title">Show/hide data based on status</string>
    <string name="profile_filters_filter_status_valid">@string/credential_status_valid</string>
    <string name="profile_filters_filter_status_revoked">@string/credential_status_revoked</string>
    <string name="profile_filters_filter_status_ask_issuer">@string/credential_status_ask_issuer</string>
    <string name="profile_filters_filter_status_ask_deletion">@string/credential_status_ask_deletion</string>
    <string name="profile_filters_filter_status_pending_registration">@string/credential_status_pending</string>
    <string name="profile_credential_header_minimize">Minimize</string>
    <string name="profile_credential_header_maximize">Expand</string>
    <string name="profile_credential_item_to_detail">View details</string>
    <string name="logs_header">My credential activity</string>
    <string name="logs_sub_header">Usage of your credentials. Check how many times you\'ve used the credentials and on which date</string>
    <string name="logs_logout">Log out</string>
    <string name="credential_detail_back">Back</string>
    <string name="credential_detail_refresh">Refresh</string>
    <string name="credential_detail_type">Data type</string>
    <string name="credential_detail_data">Data</string>
    <string name="credential_detail_date_issued">Issuance</string>
    <string name="credential_detail_active_data">Active</string>
    <string name="credential_detail_date_active_data_since">Active from</string>
    <string name="credential_detail_date_active_data_until">Active until</string>
    <string name="credential_detail_date_block_button">DELETE DATA</string>
    <string name="credential_detail_date_fav_button">Set as Default</string>
    <string name="credential_detail_date_no_fav_button">Remove as Default </string>
    <string name="credentia_detail_list_header">Activity of this data</string>
    <string name="presentation_detail_data">Activity</string>
    <string name="presentation_detail_list_unshare_button">STOP SHARING</string>
    <string name="eudi_pre_authorized_title">To ensure the security of your data</string>
    <string name="eudi_pre_authorized_description">Enter the code sent by email</string>
    <string name="eudi_pre_authorized_form_hint">Enter the code</string>
    <string name="eudi_pre_authorized_button_confirm">Confirm</string>
    <string name="receive_cred_desc">has made the following data available for you to add to your Wallet</string>
    <string name="receive_cred_buttonName">ADD DATA</string>
    <string name="receive_cred_quit_msg">If you exit now, you can add the credentials later</string>
    <string name="receive_cred_terms"><u>View terms and conditions</u></string>
    <string name="receive_cred_success_msg">You have added <b>%1$d credentials</b> to your identity.\n\nThe credentials will be available for use in a few minutes</string>
    <string name="receive_cred_info_register_evidence">Recording evidence on the blockchain is irreversible and cannot be deleted in the future.</string>
    <plurals name="receive_cred_success_msg_eudi">
        <item quantity="one">You have added <b>%1$d new credential</b> to your identity.</item>
        <item quantity="other">You have added <b>%1$d new credentials</b> to your identity.</item>
    </plurals>
    <string name="receive_cred_desc_eudi">You can add the following data to your Wallet</string>
    <string name="receive_cred_warning_message_eudi">You should only select the data for which you have been pre-authorized</string>
    <string name="presentation_request_asks_x">requests %1$d data to:</string>
    <string name="presentation_request_sub">Choose which data you want to share, and remember you can stop sharing them at any time.</string>
    <string name="presentation_request_buttonName">SHARE DATA</string>
    <string name="presentation_request_cred_header_required">Required data</string>
    <string name="presentation_request_quit_msg">You can restart this process at any time</string>
    <string name="presentation_request_view">View</string>
    <plurals name="presentation_request_missing_cred_txt_sub_eudi">
        <item quantity="one">Missing <b>%1$d data</b> requested by the entity</item>
        <item quantity="other">Missing <b>%1$d data</b> requested by the entity</item>
    </plurals>
    <string name="presentation_request_asks_x_eudi">You are requested to send %1$d data to:</string>
    <string name="presentation_request_not_data_eudi">You do not have that data</string>
    <string name="presentation_request_not_sent_data_eudi">You cannot send the requested data.</string>
    <string name="presentation_request_choose_data_eudi">Choose which data you want to share.</string>
    <plurals name="presentation_request_view_data_eudi">
        <item quantity="one">View <b>%1$d available data</b> to choose</item>
        <item quantity="other">View  <b>%1$d available data </b> to choose</item>
    </plurals>
    <plurals name="presentation_request_view_data_eudi_hidden">
        <item quantity="one">Hide <b>%1$d available data</b> to choose</item>
        <item quantity="other">Hide <b>%1$d available data </b> to choose</item>
    </plurals>
    <string name="presentation_success">The data was sent successfully</string>
    <string name="presentation_status_ask_deletion">Deletion requested</string>
    <string name="presentation_status_valid">Sent</string>
    <string name="presentation_status_deletion_confirmation">Deleted</string>
    <string name="presentation_detail_terms_noentity"><u>View terms and conditions</u></string>
    <string name="presentation_empty_title">No activity found</string>
    <string name="presentation_empty_filter_title">No activity found</string>
    <string name="presentation_empty_sub">Your credential activity log will appear here. You haven\’t used your credentials yet.</string>
</resources>