<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.register.RegisterStep0Activity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.inetum.eudi_dome_wallet.ui.register.RegisterStep0ViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <Button
                android:id="@+id/bt_prereg_register"
                style="@style/EudiButtonStyleEnabled"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:onClick="onClickRegister"
                android:text="@string/prereg_case_registration_button"
                app:layout_constraintEnd_toEndOf="@+id/textView52"
                app:layout_constraintStart_toStartOf="@+id/textView52"
                app:layout_constraintTop_toBottomOf="@+id/textView52" />


            <TextView
                android:id="@+id/textView50"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/blinker"
                android:gravity="center"
                android:text="@string/prereg_title"
                android:textAppearance="@style/EudiTextViewStyleP1"
                android:textColor="@color/primary_color_black"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline" />

            <TextView
                android:id="@+id/textView51"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/blinker"
                android:text="@string/prereg_case_registration_title"
                android:textAppearance="@style/EudiTextViewStyleP1"
                android:textColor="@color/primary_color_black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView50" />

            <TextView
                android:id="@+id/textView53"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/blinker"
                android:text="@string/prereg_case_recovery_title"
                android:textAppearance="@style/EudiTextViewStyleP1"
                android:textColor="@color/primary_color_black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_prereg_register" />

            <TextView
                android:id="@+id/textView52"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/blinker"
                android:text="@string/prereg_case_registration_sub"
                android:textAppearance="@style/EudiTextViewStyleP1"
                android:textColor="@color/primary_color_black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView51" />

            <TextView
                android:id="@+id/textView54"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/blinker"
                android:text="@string/prereg_case_recovery_sub"
                android:textAppearance="@style/EudiTextViewStyleP1"
                android:textColor="@color/primary_color_black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView53" />

            <ImageView
                android:id="@+id/imageView39"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_mio_register" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>