<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="23dp"
            android:onClick="onClickBack"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck">

            <include
                android:id="@+id/includeLayoutBackButton"
                layout="@layout/layout_back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/iv_logo_toolbar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/cl_back_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cl_back_button"
            app:srcCompat="@drawable/logo_svg" />

        <LinearLayout
            android:id="@+id/ll_input_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_back_button">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eudi_pre_authorized_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="start"
                android:paddingBottom="16dp" />

            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eudi_pre_authorized_description"
                android:textSize="14sp"
                android:gravity="start"
                android:paddingBottom="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlInputCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eudi_pre_authorized_form_hint">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etInputCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eudi_pre_authorized_button_confirm"
            android:layout_marginBottom="22dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_input_code"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
